Supplier renamed as Factory in resx. Manufacturers removed from application's links.

--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -96,7 +96,7 @@
 	</data>
 
 	<data name="AllSuppliers" xml:space="preserve">
-		<value>All Suppliers</value>
+		<value>All Factories</value>
 	</data>
 
 	<data name="ApplicationBriefName" xml:space="preserve">
