--- a/Source/CP.i8n/ActionStrings.tr.resx
+++ b/Source/CP.i8n/ActionStrings.tr.resx
@@ -71,8 +71,20 @@
 		<value>Ekle</value>
 	</data>
 
+	<data name="AddFile" xml:space="preserve">
+		<value>Dosya Ekle</value>
+	</data>
+
 	<data name="AddFiles" xml:space="preserve">
 		<value>Dosya Ekle</value>
+	</data>
+
+	<data name="AddImage" xml:space="preserve">
+		<value>Resim Ekle</value>
+	</data>
+
+	<data name="AddImages" xml:space="preserve">
+		<value>Resim Ekle</value>
 	</data>
 
 	<data name="AddNew" xml:space="preserve">
@@ -193,6 +205,10 @@
 
 	<data name="Print" xml:space="preserve">
 		<value>Yazdır</value>
+	</data>
+
+	<data name="Processing" xml:space="preserve">
+		<value>İşleniyor</value>
 	</data>
 
 	<data name="Register" xml:space="preserve">
